docker-compose(He cambiado el nombre del contenedor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
 
   db:
 
-    container_name: db_prueba
+    container_name: db_concesionario
     image: mariadb:latest
     restart: always
     environment:
